--- a/MobileTabletCounter/MobileTabletCounter/App.xaml
+++ b/MobileTabletCounter/MobileTabletCounter/App.xaml
@@ -12,6 +12,18 @@
             <Color x:Key="Turquoise">#34d1bf</Color>
             <Color x:Key="Black">#070707</Color>
             <Color x:Key="Cerise">#d1345b</Color>
+
+            
+            
+            
+            <Style x:Key="BlueButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource Turquoise}"></Setter>
+                <Setter Property="BorderColor" Value="{StaticResource Turquoise}"></Setter>
+            </Style>
+            <Style x:Key="RedButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource Cerise}"></Setter>
+                <Setter Property="BorderColor" Value="{StaticResource Cerise}"></Setter>
+            </Style>
         </ResourceDictionary>        
     </Application.Resources>
 </Application>
