--- a/MobileTabletCounter/MobileTabletCounter/Views/Medicine.xaml
+++ b/MobileTabletCounter/MobileTabletCounter/Views/Medicine.xaml
@@ -2,9 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileTabletCounter.Views.Medicine"
-             Title="Medicine">
+             Title="Medicine"
+             >
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="AddButton" Text="Create" Clicked="CreateBarButton_Clicked" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        
         <StackLayout>
             <ScrollView>
                 <StackLayout>
@@ -14,8 +17,6 @@
                     <StackLayout x:Name="filledBarsStackLayout" />
                 </StackLayout>
             </ScrollView>
-            <Button Text="Create Bar" Clicked="CreateBarButton_Clicked" />
-            <Button Text="Remove All" Clicked="RemoveAllButton_Clicked" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
